@@ -1,3 +1,8 @@
+1998-08-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* ui.c (create_prefs_dialog), main.c (main), ghex.h:
+	honor MDI preferences stuff just implemented in gnome-mdi.
+	
 1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* ui.c, hex-document.c: use more GNOME_STOCK items.
